2006-07-13  Thiemo Seufer  <ths@mips.com>

	* ld-mips-elf/tlslib-o32-ver.got, ld-mips-elf/tlslib-o32.got:
	Update TLS testcases.

2006-07-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/2884
	* ld-elf/begin.c: New file.
	* ld-elf/end.c: Likewise.
	* ld-elf/endhidden.c: Likewise.
	* ld-elf/endprotected.c: Likewise.
	* ld-elf/foo.c: Likewise.
	* ld-elf/foo.map: Likewise.
	* ld-elf/hidden.out: Likewise.
	* ld-elf/main.c: Likewise.
	* ld-elf/normal.out: Likewise.
	* ld-elf/shared.exp: Likewise.

	* lib/ld-lib.exp (run_cc_link_tests): New.

2006-07-12  Richard Sandiford  <richard@codesourcery.com>

	* ld-m68k/merge-ok-1c.d: New test.
	* ld-m68k/m68k.exp: Run it.

2006-07-11  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-2.d: Adjust for recent hash-related changes.

2006-07-10  Jakub Jelinek  <jakub@redhat.com>

	* ld-powerpc/tlsso32.r: Adjust.
	* ld-powerpc/tlsso32.d: Adjust.
	* ld-powerpc/tlsso32.g: Adjust.
	* ld-powerpc/tlsso.r: Adjust.
	* ld-powerpc/tlsso.g: Adjust.
	* ld-powerpc/tlstocso.g: Adjust.

2006-07-05  Thiemo Seufer  <ths@mips.com>

	* ld-mips-elf/multi-got-1.d, ld-mips-elf/tls-multi-got-1.got,
	ld-mips-elf/tls-multi-got-1.r: Update multigot testcases.

2006-06-30  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/tlsbindesc.dd: Updated to expect xchg %ax,%ax instead
	of 2 nops.
	* ld-i386/tlsdesc.dd: Likewise.
	* ld-i386/tlsgdesc.dd: Likewise.
	* ld-x86-64/tlsbindesc.dd: Likewise.
	* ld-x86-64/tlsdesc.dd: Likewise.
	* ld-x86-64/tlsdesc.pd: Likewise.
	* ld-x86-64/tlsgdesc.dd: Likewise.

2006-06-29  Jakub Jelinek  <jakub@redhat.com>

	PR ld/2513
	* ld-i386/tlsbin.dd: Fix expected output.

2006-06-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/tls_common.exp: Match 32-bit output.

2006-06-20  Jakub Jelinek  <jakub@redhat.com>

	* ld-elf/tls_common.exp: New test.
	* ld-elf/tls_common.s: New file.

2006-06-20  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/eh1.d: Update for fewer program headers.
	* ld-elf/eh2.d: Likewise.
	* ld-elf/eh3.d: Likewise.
